test/errors/stmt_assign.py
x = y = 1
a: int = b = 2
c = d: int = 3
