test/errors/stmt_assign.py.expected
test/errors/stmt_assign.py:2 error: expected new line, got `=`
test/errors/stmt_assign.py:3 error: expected new line, got `:`
